fix(header): align background videoand header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,6 +57,10 @@ video {
 }
 
 @media only screen and (min-width: 768px) {
+    .header-media {
+        height: 90vh;
+    }
+
     .secondary-header h1,
     .secondary-header h2 {
         font-size: 1rem;
@@ -107,6 +111,7 @@ video {
         padding: .7rem .5rem;
         text-align: center;
         transition: Background-color .25s ease-in-out;
+        font-size: .87rem;
     }
 
     .logo-content, .button-content {
@@ -132,14 +137,28 @@ video {
 
 @media only screen and (min-width: 1024px) {
     .header-media {
-        height: 85vh;
+        height: 88vh;
+        position: relative;
+        overflow: hidden;
+        z-index: -20;
+        width: 100%;
     }
 
     video {
         display: block;
-        position: relative;
-        background-size: cover;
-        height: 100%;
-        overflow: hidden;
+        position: absolute;
+        z-index: -10;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-width: 100%;
+        min-height: 100%;
+    }
+}
+
+@media only screen and (min-width: 1170px) {
+    .primary-header,
+    .secondary-header {
+        width: 1170px;
     }
 }
